correct the UI of the cart, add scrolling for items, fix the item title if too long, add comments field

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -68,3 +68,16 @@
 .group:hover .infoLayout_type {
     top: 10px;
 }
+
+.custom-scroll::-webkit-scrollbar {
+    width: 6px;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.3);
+    border-radius: 4px;
+}
+
+.custom-scroll::-webkit-scrollbar-track {
+    background-color: transparent;
+}
